force-app/main/default/objects/Lead/fields/antiCompanyCheck__c.field-meta.xml
<CustomField>
    <fullName>antiCompanyCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>反社チェック状況</label>
    <type>Checkbox</type>
</CustomField>