force-app/main/default/objects/Lead/fields/AttackNG__c.field-meta.xml
<CustomField>
    <fullName>AttackNG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>アタックNG</label>
    <type>Checkbox</type>
</CustomField>