force-app/main/default/objects/Lead/fields/AttackNGReason__c.field-meta.xml
<CustomField>
    <fullName>AttackNGReason__c</fullName>
    <label>アタックNG理由</label>
    <length>100</length>
    <type>Text</type>
</CustomField>