force-app/main/default/objects/Lead/fields/BLMemberRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>BLMemberRegistrationDate__c</fullName>
    <label>BL会員登録日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>