force-app/main/default/objects/Lead/fields/CallingAvailability__c.field-meta.xml
<CustomField>
    <fullName>CallingAvailability__c</fullName>
    <label>架電可否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>○</fullName>
            </value>
            <value>
                <fullName>海津OK</fullName>
            </value>
            <value>
                <fullName>山口OK</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>