force-app/main/default/objects/Lead/fields/CallResult__c.field-meta.xml
<CustomField>
    <fullName>CallResult__c</fullName>
    <label>通電可否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>離席</fullName>
            </value>
            <value>
                <fullName>在宅</fullName>
            </value>
            <value>
                <fullName>休暇</fullName>
            </value>
            <value>
                <fullName>出張</fullName>
            </value>
            <value>
                <fullName>通電</fullName>
            </value>
            <value>
                <fullName>未通電</fullName>
            </value>
            <value>
                <fullName>電話番号不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>