force-app/main/default/objects/Lead/fields/ContentsDistinction__c.field-meta.xml
<CustomField>
    <fullName>ContentsDistinction__c</fullName>
    <label>コンテンツ区別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>