force-app/main/default/objects/Lead/fields/EmployeeCountISEntry__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCountISEntry__c</fullName>
    <label>従業員数（IS入力）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1名-100名</fullName>
            </value>
            <value>
                <fullName>101名-300名</fullName>
            </value>
            <value>
                <fullName>301名-500名</fullName>
            </value>
            <value>
                <fullName>501名−1000名</fullName>
            </value>
            <value>
                <fullName>1001名以上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>