force-app/main/default/objects/Lead/fields/EmployeeCountSelectionList__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCountSelectionList__c</fullName>
    <label>従業員数（選択リスト）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-49人</fullName>
            </value>
            <value>
                <fullName>50-99人</fullName>
            </value>
            <value>
                <fullName>100-299人</fullName>
            </value>
            <value>
                <fullName>300-499人</fullName>
            </value>
            <value>
                <fullName>500-999人</fullName>
            </value>
            <value>
                <fullName>1000-4999人</fullName>
            </value>
            <value>
                <fullName>5000-9999人</fullName>
            </value>
            <value>
                <fullName>10000人以上</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>10001名以上</fullName>
                <isActive>false</isActive>
                <label>10001名以上</label>
            </value>
            <value>
                <fullName>1001-10000名</fullName>
                <isActive>false</isActive>
                <label>1001-10000名</label>
            </value>
            <value>
                <fullName>101-500名</fullName>
                <isActive>false</isActive>
                <label>101-500名</label>
            </value>
            <value>
                <fullName>11-100名</fullName>
                <isActive>false</isActive>
                <label>11-100名</label>
            </value>
            <value>
                <fullName>1名</fullName>
                <isActive>false</isActive>
                <label>1名</label>
            </value>
            <value>
                <fullName>2-10名</fullName>
                <isActive>false</isActive>
                <label>2-10名</label>
            </value>
            <value>
                <fullName>501-1000名</fullName>
                <isActive>false</isActive>
                <label>501-1000名</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>