force-app/main/default/objects/Lead/fields/IndustriesBL__c.field-meta.xml
<CustomField>
    <fullName>IndustriesBL__c</fullName>
    <label>業種（選択リスト）</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>製造業</fullName>
            </value>
            <value>
                <fullName>サービス（インターネット）</fullName>
            </value>
            <value>
                <fullName>サービス（その他）</fullName>
            </value>
            <value>
                <fullName>旅行・ホテル・レジャー業</fullName>
            </value>
            <value>
                <fullName>外食業</fullName>
            </value>
            <value>
                <fullName>小売業</fullName>
            </value>
            <value>
                <fullName>情報システム</fullName>
            </value>
            <value>
                <fullName>コンサルタント</fullName>
            </value>
            <value>
                <fullName>銀行</fullName>
            </value>
            <value>
                <fullName>証券</fullName>
            </value>
            <value>
                <fullName>保険</fullName>
            </value>
            <value>
                <fullName>その他金融</fullName>
            </value>
            <value>
                <fullName>建設</fullName>
            </value>
            <value>
                <fullName>不動産</fullName>
            </value>
            <value>
                <fullName>商社・卸売業</fullName>
            </value>
            <value>
                <fullName>電気・ガス・水道</fullName>
            </value>
            <value>
                <fullName>教育</fullName>
            </value>
            <value>
                <fullName>農林・水産・鉱業</fullName>
            </value>
            <value>
                <fullName>医療・福祉・介護</fullName>
            </value>
            <value>
                <fullName>マスコミ</fullName>
            </value>
            <value>
                <fullName>運輸・郵便業</fullName>
            </value>
            <value>
                <fullName>情報通信業</fullName>
            </value>
            <value>
                <fullName>政府・官公庁・公的団体</fullName>
            </value>
            <value>
                <fullName>地方自治体</fullName>
            </value>
            <value>
                <fullName>弁護士</fullName>
            </value>
            <value>
                <fullName>公認会計士</fullName>
            </value>
            <value>
                <fullName>税理士</fullName>
            </value>
            <value>
                <fullName>社労士</fullName>
            </value>
            <value>
                <fullName>その他士業</fullName>
            </value>
            <value>
                <fullName>自営業</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>