force-app/main/default/objects/Lead/fields/InNegotiation__c.field-meta.xml
<CustomField>
    <fullName>InNegotiation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>商談中</label>
    <type>Checkbox</type>
</CustomField>