force-app/main/default/objects/Lead/fields/JobCategoryBL__c.field-meta.xml
<CustomField>
    <fullName>JobCategoryBL__c</fullName>
    <label>職種（BL会員登録時）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>