force-app/main/default/objects/Lead/fields/JobCategoryClassification__c.field-meta.xml
<CustomField>
    <fullName>JobCategoryClassification__c</fullName>
    <label>職種分類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>法務</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>知財</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>経営企画</fullName>
            </value>
            <value>
                <fullName>海外事業</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>