force-app/main/default/objects/Lead/fields/JobTitleBL__c.field-meta.xml
<CustomField>
    <fullName>JobTitleBL__c</fullName>
    <label>役職（BL会員登録時）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>