force-app/main/default/objects/Lead/fields/JobTitleISEntry__c.field-meta.xml
<CustomField>
    <fullName>JobTitleISEntry__c</fullName>
    <label>役職（IS入力）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>会長・社長</fullName>
            </value>
            <value>
                <fullName>役員（取締役）</fullName>
            </value>
            <value>
                <fullName>執行役員/局長/本部長</fullName>
            </value>
            <value>
                <fullName>部長クラス</fullName>
            </value>
            <value>
                <fullName>課長クラス（マネージャー）</fullName>
            </value>
            <value>
                <fullName>係長・主任クラス</fullName>
            </value>
            <value>
                <fullName>一般社員</fullName>
            </value>
            <value>
                <fullName>専門職</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>