force-app/main/default/objects/Lead/fields/LeadAttribute__c.field-meta.xml
<CustomField>
    <fullName>LeadAttribute__c</fullName>
    <label>リード属性</label>
    <type>TextArea</type>
</CustomField>