force-app/main/default/objects/Lead/fields/LeadID18__c.field-meta.xml
<CustomField>
    <fullName>LeadID18__c</fullName>
    <formula>casesafeid(Id)</formula>
    <label>リードID18桁</label>
    <type>Text</type>
</CustomField>