force-app/main/default/objects/Lead/fields/LeadNumber__c.field-meta.xml
<CustomField>
    <fullName>LeadNumber__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>リード番号</label>
    <type>AutoNumber</type>
</CustomField>