force-app/main/default/objects/Lead/fields/LeadStatusDetail__c.field-meta.xml
<CustomField>
    <fullName>LeadStatusDetail__c</fullName>
    <label>リード 状況詳細</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>不通/不在</fullName>
            </value>
            <value>
                <fullName>メール送付</fullName>
            </value>
            <value>
                <fullName>継続</fullName>
            </value>
            <value>
                <fullName>日程調整中</fullName>
            </value>
            <value>
                <fullName>活動せず活動終了</fullName>
            </value>
            <value>
                <fullName>接続せず活動終了</fullName>
            </value>
            <value>
                <fullName>顧客からのNG</fullName>
            </value>
            <value>
                <fullName>アポ獲得</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>