force-app/main/default/objects/Lead/fields/LegalWorkWorkersCountISEntry__c.field-meta.xml
<CustomField>
    <fullName>LegalWorkWorkersCountISEntry__c</fullName>
    <label>法務従事者人数（IS入力）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1名</fullName>
            </value>
            <value>
                <fullName>2-4名</fullName>
            </value>
            <value>
                <fullName>5-10名</fullName>
            </value>
            <value>
                <fullName>10名以上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>