force-app/main/default/objects/Lead/fields/LegalWorkWorkersISEntry__c.field-meta.xml
<CustomField>
    <fullName>LegalWorkWorkersISEntry__c</fullName>
    <label>法務従事者（IS入力）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>法務従事者</fullName>
            </value>
            <value>
                <fullName>法務従事者以外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>