force-app/main/default/objects/Lead/fields/NGChangeTime__c.field-meta.xml
<CustomField>
    <fullName>NGChangeTime__c</fullName>
    <label>NG変更日時</label>
    <type>DateTime</type>
</CustomField>