force-app/main/default/objects/Lead/fields/NGDetail__c.field-meta.xml
<CustomField>
    <fullName>NGDetail__c</fullName>
    <label>NG詳細</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>連絡つながらず</fullName>
            </value>
            <value>
                <fullName>多忙/時期改め</fullName>
            </value>
            <value>
                <fullName>興味本位</fullName>
            </value>
            <value>
                <fullName>部署違い</fullName>
            </value>
            <value>
                <fullName>予算が無い</fullName>
            </value>
            <value>
                <fullName>決裁権が無い</fullName>
            </value>
            <value>
                <fullName>一方的NG</fullName>
            </value>
            <value>
                <fullName>クレーム（以降連絡不可）</fullName>
            </value>
            <value>
                <fullName>受付ブロック</fullName>
            </value>
            <value>
                <fullName>営業対応中（3日以内）</fullName>
            </value>
            <value>
                <fullName>営業商談中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>