force-app/main/default/objects/Lead/fields/NGReasonDetail__c.field-meta.xml
<CustomField>
    <fullName>NGReasonDetail__c</fullName>
    <label>NG理由詳細</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NGReason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一方的NG</fullName>
            </value>
            <value>
                <fullName>興味本位</fullName>
            </value>
            <value>
                <fullName>多忙/時期改め</fullName>
            </value>
            <value>
                <fullName>予算が無い</fullName>
            </value>
            <value>
                <fullName>一存では決めれない</fullName>
            </value>
            <value>
                <fullName>クレーム</fullName>
            </value>
            <value>
                <fullName>退職・部署違い</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>