force-app/main/default/objects/Lead/fields/OrgA_ID__c.field-meta.xml
<CustomField>
    <fullName>OrgA_ID__c</fullName>
    <description>Shanonで保持していた組織AのIDを反映。</description>
    <externalId>true</externalId>
    <label>組織A_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>