force-app/main/default/objects/Lead/fields/PhoneDivisionNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneDivisionNumber__c</fullName>
    <label>電話（部署番号）</label>
    <type>Phone</type>
</CustomField>