force-app/main/default/objects/Lead/fields/PurchasingPhase__c.field-meta.xml
<CustomField>
    <fullName>PurchasingPhase__c</fullName>
    <label>購買フェーズ</label>
    <type>TextArea</type>
</CustomField>