force-app/main/default/objects/Lead/fields/ReceivedOrder__c.field-meta.xml
<CustomField>
    <fullName>ReceivedOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>受注済み</label>
    <type>Checkbox</type>
</CustomField>