force-app/main/default/objects/Lead/fields/RecyclingChangeTime__c.field-meta.xml
<CustomField>
    <fullName>RecyclingChangeTime__c</fullName>
    <label>リサイクル変更日時</label>
    <type>DateTime</type>
</CustomField>