force-app/main/default/objects/Lead/fields/ScoreMeasure__c.field-meta.xml
<CustomField>
    <fullName>ScoreMeasure__c</fullName>
    <label>スコア_施策</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>