force-app/main/default/objects/Lead/fields/ShanonMemo__c.field-meta.xml
<CustomField>
    <fullName>ShanonMemo__c</fullName>
    <label>Shanonメモ</label>
    <type>TextArea</type>
</CustomField>