force-app/main/default/objects/Lead/fields/ShanonScoreBLC__c.field-meta.xml
<CustomField>
    <fullName>ShanonScoreBLC__c</fullName>
    <label>ShanonスコアBLC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>