force-app/main/default/objects/Lead/fields/ShanonScoreBLL__c.field-meta.xml
<CustomField>
    <fullName>ShanonScoreBLL__c</fullName>
    <label>ShanonスコアBLL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>