force-app/main/default/objects/Lead/fields/ShanonScoreRozetta__c.field-meta.xml
<CustomField>
    <fullName>ShanonScoreRozetta__c</fullName>
    <label>Shanonスコアロゼッタ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>