force-app/main/default/objects/Lead/fields/SmpId__c.field-meta.xml
<CustomField>
    <fullName>SmpId__c</fullName>
    <externalId>true</externalId>
    <label>SMP_ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>