force-app/main/default/objects/Lead/fields/SupportedEndChangeDateTime__c.field-meta.xml
<CustomField>
    <fullName>SupportedEndChangeDateTime__c</fullName>
    <label>対応終了変更日時</label>
    <type>DateTime</type>
</CustomField>