force-app/main/default/objects/Lead/fields/TradingRepPersonName1Kana__c.field-meta.xml
<CustomField>
    <fullName>TradingRepPersonName1Kana__c</fullName>
    <label>取引担当者名１かな</label>
    <length>100</length>
    <type>Text</type>
</CustomField>