force-app/main/default/objects/Lead/fields/TrafficSourceMedia__c.field-meta.xml
<CustomField>
    <fullName>TrafficSourceMedia__c</fullName>
    <label>流入経路_媒体</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>広告</fullName>
            </value>
            <value>
                <fullName>自然流入</fullName>
            </value>
            <value>
                <fullName>インサイド対応</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>