force-app/main/default/objects/Lead/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>事務所</fullName>
            </value>
            <value>
                <fullName>企業・法人</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>