force-app/main/default/objects/Lead/listViews/GM_Lead.listView-meta.xml
<ListView>
    <fullName>GM_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>GM</label>
    <queue>GM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>