force-app/main/default/objects/Lead/listViews/View1.listView-meta.xml
<ListView>
    <fullName>View1</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TrafficSourceMedia__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>未着手</value>
    </filters>
    <label>法人問い合わせ</label>
</ListView>