force-app/main/default/objects/Lead/listViews/View10.listView-meta.xml
<ListView>
    <fullName>View10</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LeadType__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notContain</operation>
        <value>今井,門田,長山,人見,渡邊,塚本,佐藤,関口</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>未着手,対応保留</value>
    </filters>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>notContain</operation>
        <value>特許,税理士,弁護士ドットコム,テスト,岩波書店,学陽書房,ぎょうせい,金融財政事情研究会,勁草書房,晃洋書房,三修社,信山社,新日本法規出版</value>
    </filters>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>notContain</operation>
        <value>日本加除出版,日本商事仲裁協会,日本能率協会マネジメントセンター,日本評論社,日本法令,日本労働弁護団,発明推進協会,フィルムアート社,法律文化社</value>
    </filters>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>notContain</operation>
        <value>法令出版株式会社,有斐閣,レクシスネクシス,労働新聞社,東洋経済新報社,立花書房,中央経済社,東京大学出版会,税務経理協会,第一法規</value>
    </filters>
    <filters>
        <field>ReceivedOrder__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>AttackNG__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ScoreBLL__c</field>
        <operation>greaterOrEqual</operation>
        <value>10</value>
    </filters>
    <filters>
        <field>JobCategoryBL__c</field>
        <operation>notContain</operation>
        <value>営業,セールス,マーケ,経理,財務,研究</value>
    </filters>
    <filters>
        <field>NGReason__c</field>
        <operation>notEqual</operation>
        <value>取引実績あり,重複リード,対象外（個人/学生/外国人/その他）,連絡先不可,過去クレーム（窓口統一/架電不可）,受付ブロック,その他</value>
    </filters>
    <label>【今井】リサイクル分配用</label>
</ListView>