force-app/main/default/objects/Lead/listViews/View12.listView-meta.xml
<ListView>
    <fullName>View12</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LeadType__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>ScoreBLL__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>対応終了</value>
    </filters>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>notContain</operation>
        <value>税理士,弁護士ドットコム,テスト,岩波書店,学陽書房,ぎょうせい,金融財政事情研究会,勁草書房,晃洋書房,三修社,信山社,新日本法規出版</value>
    </filters>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>notContain</operation>
        <value>日本加除出版,日本商事仲裁協会,日本能率協会マネジメントセンター,日本評論社,日本法令,日本労働弁護団,発明推進協会,フィルムアート社,法律文化社</value>
    </filters>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>notContain</operation>
        <value>法令出版株式会社,有斐閣,レクシスネクシス,労働新聞社,東洋経済新報社,立花書房,中央経済社,東京大学出版会,税務経理協会,第一法規,[[Unknown]]</value>
    </filters>
    <filters>
        <field>ReceivedOrder__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>AttackNG__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ScoreMeasure__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NGReason__c</field>
        <operation>notEqual</operation>
        <value>取引実績あり,重複リード,対象外（個人/学生/外国人/その他）,連絡先不可,過去クレーム（窓口統一/架電不可）,受付ブロック,その他</value>
    </filters>
    <filters>
        <field>LEAD.LAST_ACTIVITY</field>
        <operation>lessOrEqual</operation>
        <value>3/15/2024</value>
    </filters>
    <label>トラキング：今井</label>
</ListView>